<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.bankbazaar</groupId>
    <artifactId>brint</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>Bankbazaar</name>
    <url>http://www.bankbazaar.com</url>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <fork>true</fork>
                    <meminitial>128m</meminitial>
                    <maxmem>1024m</maxmem>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>**/*.xls</exclude>
                </excludes>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**/*.xls</include>
                </includes>
            </testResource>
        </testResources>
    </build>

    <repositories>
        <repository>
            <id>snapshots</id>
            <name>Snapshots Repository</name>
            <url>http://build.bankbazaar.com/archiva/repository/snapshots/</url>
        </repository>
        <repository>
            <id>internal</id>
            <name>Internal Repository</name>
            <url>http://build.bankbazaar.com/archiva/repository/internal/</url>
        </repository>
        <repository>
            <id>theta-snapshots</id>
            <name>Snapshots Repository</name>
            <url>http://theta-build.bankbazaar.com/archiva/repository/snapshots/</url>
        </repository>
        <repository>
            <id>theta-internal</id>
            <name>Internal Repository</name>
            <url>http://theta-build.bankbazaar.com/archiva/repository/internal/</url>
        </repository>
        <repository>
            <id>mvn-public</id>
            <name>MVNRepository</name>
            <url>http://mvnrepository.com</url>
        </repository>
        <repository>
            <id>appfuse-snapshots</id>
            <url>http://oss.sonatype.org/content/repositories/appfuse-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>java.net.m2</id>
            <url>http://download.java.net/maven/2/</url>
        </repository>
        <repository>
            <id>jgit-repository</id>
            <url>http://download.eclipse.org/jgit/maven</url>
        </repository>
        <repository>
            <id>grails</id>
            <name>grails</name>
            <url>http://repo.grails.org/grails/core</url>
        </repository>
        <repository>
            <id>grails-plugins</id>
            <name>grails-plugins</name>
            <url>http://repo.grails.org/grails/plugins</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>appfuse-snapshots</id>
            <url>http://oss.sonatype.org/content/repositories/appfuse-snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <!--Maven plugin version properties-->
        <maven-war-plugin.version>2.4</maven-war-plugin.version>

        <!--Code coverage properties-->
        <argLine/>
        <jacoco.version>0.7.6.201602180812</jacoco.version>
        <!-- Application settings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <copyright.year>2014</copyright.year>
        <dao.framework>hibernate</dao.framework>
        <web.framework>struts</web.framework>
        <amp.genericCore>true</amp.genericCore>
        <amp.fullSource>false</amp.fullSource>
        <db.name>brint</db.name>
        <cibil.db.name>cibildb</cibil.db.name>

        <!-- Framework dependency versions -->
        <appfuse.version>2.2.1</appfuse.version>
        <commons.fileupload.version>1.2.2</commons.fileupload.version>
        <commons.io.version>2.1</commons.io.version>
        <displaytag.version>1.2</displaytag.version>
        <spring.version>3.1.3.RELEASE</spring.version>
        <aws.version>1.4.5</aws.version>
        <struts.version>2.3.16.3</struts.version>
        <bonecp.version>0.7.1.RELEASE</bonecp.version>
        <eclipse.jgit.version>3.7.0.201502260915-r</eclipse.jgit.version>

        <!-- Testing dependency versions -->
        <jmock.version>2.5.1</jmock.version>
        <jsp.version>2.0</jsp.version>
        <junit.version>4.10</junit.version>
        <mockito.version>1.10.19</mockito.version>
        <powermock.version>1.6.4</powermock.version>
        <spring-test-mvc.version>1.0.0.M2</spring-test-mvc.version>
        <servlet.version>2.5</servlet.version>

        <!-- Database settings -->
        <dbunit.dataTypeFactoryName>org.dbunit.ext.mysql.MySqlDataTypeFactory</dbunit.dataTypeFactoryName>
        <dbunit.operation.type>CLEAN_INSERT</dbunit.operation.type>
        <hibernate.dialect>org.hibernate.dialect.MySQL5InnoDBDialect</hibernate.dialect>
        <jdbc.groupId>mysql</jdbc.groupId>
        <jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
        <jdbc.version>5.1.22</jdbc.version>
        <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
        <jdbc.url>jdbc:mysql://localhost/${db.name}?createDatabaseIfNotExist=true&amp;amp;useUnicode=true&amp;amp;characterEncoding=utf-8&amp;amp;autoReconnect=true</jdbc.url>
        <jdbc.username>cloud</jdbc.username>
        <jdbc.password>scape</jdbc.password>

        <!-- Properties calculated by AppFuse when running full-source plugin -->
        <aspectj.version>1.6.10</aspectj.version>
        <commons.beanutils.version>1.8.3</commons.beanutils.version>
        <commons.logging.version>1.1.1</commons.logging.version>
        <commons.collections.version>3.2.1</commons.collections.version>
        <commons.dbcp.version>1.3</commons.dbcp.version>
        <commons.lang.version>2.6</commons.lang.version>
        <commons.validator.version>1.4.0</commons.validator.version>
        <commons.httpclient.version>3.1</commons.httpclient.version>
        <commons.codec.version>1.7</commons.codec.version>
        <cxf.version>2.7.3</cxf.version>
        <dwr.version>2.0.3</dwr.version>
        <ehcache.version>2.6.2</ehcache.version>
        <ehcache.web.version>2.0.4</ehcache.web.version>
        <hibernate.search.version>3.4.2.Final</hibernate.search.version>
        <hibernate.version>3.6.10.Final</hibernate.version>
        <javamail.version>1.4.1</javamail.version>
        <jpa.version>1.0.1.Final</jpa.version>
        <jstl.version>1.1.2</jstl.version>
        <log4j.version>1.2.16</log4j.version>
        <log4j.extras.version>1.1</log4j.extras.version>
        <sitemesh.version>2.4</sitemesh.version>
        <slf4j.version>1.6.2</slf4j.version>
        <spring.security.version>3.1.2.RELEASE</spring.security.version>
        <struts.menu.version>2.4.3</struts.menu.version>
        <urlrewrite.version>3.2.0</urlrewrite.version>
        <velocity.version>1.4</velocity.version>
        <grails.version>2.1.1</grails.version>
        <grails-test-plugin.version>2.1.0</grails-test-plugin.version><!--using a separate version for test plugins as these plugins are not available for version 2.1.1. Refer: http://jira.grails.org/browse/MAVEN-188-->
        <groovy.version>1.8.8</groovy.version>
        <cglib.version>2.2</cglib.version>
        <org.apache.velocity.version>1.7</org.apache.velocity.version>
        <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
        <sonar.jdbc.username>cloud</sonar.jdbc.username>
        <sonar.jdbc.password>scape</sonar.jdbc.password>
        <sonar.host.url>http://sonar.bankbazaar.com:9000</sonar.host.url>
        <sonar.sources>pom.xml,src/main</sonar.sources>
    </properties>
    <dependencies>
        <!--Test Libraries-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit-dep</artifactId>
            <version>4.8.2</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock</artifactId>
            <version>${jmock.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock-junit4</artifactId>
            <version>${jmock.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.bankbazaar</groupId>
            <artifactId>beantester</artifactId>
            <version>1.1</version>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>
    <modules>
        <module>domain-container</module>
        <module>core-container</module>
        <module>warehouse</module>
        <module>csdb-container</module>
        <module>cp-container</module>
        <module>websites</module>
        <module>services</module>
        <module>md</module>
        <module>bankdataupload</module>
    </modules>

    <profiles>
        <profile>
            <id>Jacoco</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <includes>
                                <include>com.bankbazaar.*</include>
                                <include>csdb.*</include>
                                <include>warehouse.*</include>
                                <include>cptf.*</include>
                            </includes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.19.1</version>
                        <configuration>
                            <useUnlimitedThreads>true</useUnlimitedThreads>
                            <argLine>@{argLine} -Xmx1536m -XX:MaxPermSize=512m -XX:PermSize=192m</argLine>
                            <systemProperties>
                                <testmode>true</testmode>
                                <stage>test</stage>
                            </systemProperties>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.jacoco</groupId>
                    <artifactId>org.jacoco.agent</artifactId>
                    <classifier>runtime</classifier>
                    <version>${jacoco.version}</version>
                </dependency>
            </dependencies>
            <properties>
                <jacoco.includes>com.bankbazaar.*, csdb.*, warehouse.*, cptf.*</jacoco.includes>

                <!--Properties to have test case going upon occurrence of failure-->
                <failIfNoTests>true</failIfNoTests>
                <maven.test.failure.ignore>true</maven.test.failure.ignore>
            </properties>
        </profile>
        <profile>
            <id>Test</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.19.1</version>
                        <configuration>
                            <parallel>classes</parallel>
                            <useUnlimitedThreads>true</useUnlimitedThreads>
                            <argLine>-Xmx2048m -XX:MaxPermSize=1024m -XX:PermSize=192m</argLine>
                            <forkCount>3</forkCount>
                            <reuseForks>true</reuseForks>
                            <systemPropertyVariables>
                                <testmode>true</testmode>
                                <stage>test</stage>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>

